enabling data binding

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,11 @@ android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
 
-    viewBinding {
+//    viewBinding {
+//        enabled = true
+//    }
+
+    dataBinding {
         enabled = true
     }
 
